src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@llvm14_get_context.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private i1 @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret i1 true
}
