src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@llvm14_lookup_by_id.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void ()* @_hl.main.1({} %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void ()* @wasm_func_42
}

declare void @wasm_func_42()
