src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@llvm21_call_args.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal {} @_hl.main.1({} %0, ptr %1, i32 %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void %1(i32 %2)
  ret {} undef
}
