src/qir/snapshots/hugr_qir__qir__wasm_ext__test__wasm_codegen@llvm21_call_ret_int.snap
---
source: src/qir/wasm_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i32 @_hl.main.1({} %0, ptr %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = call i32 %1()
  ret i32 %2
}
